--- a/index.html
+++ b/index.html
@@ -16,16 +16,11 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <label class="theme-switch">
-            <input type="checkbox" id="theme-toggle">
-            <span class="slider"></span>
-        </label>
     </header>
 
     <main>
         <div class="container">
             <aside class="slider">
-                <!-- Vertical Slider Content -->
                 <h3>Vertical Slider</h3>
                 <div class="slider-content">
                     <p>Slide 1</p>
@@ -36,12 +31,17 @@
             <section class="image-gallery">
                 <h2>Image Gallery</h2>
                 <div class="images">
-                    <div class="image-placeholder">Image 1</div>
-                    <div class="image-placeholder">Image 2</div>
-                    <div class="image-placeholder">Image 3</div>
+                    <div class="image-placeholder">
+                        <img src="image1.jpg" alt="Image 1">
+                    </div>
+                    <div class="image-placeholder">
+                        <img src="image2.jpg" alt="Image 2">
+                    </div>
+                    <div class="image-placeholder">
+                        <img src="image3.jpg" alt="Image 3">
+                    </div>
                 </div>
                 <div class="extra-content">
-                    <!-- Additional content to create scrollable area -->
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
