--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <header>
         <h1>Welcome to My Website</h1>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#products">Our Products</a></li> <!-- New navigation link -->
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
     </header>
 
     <main>
