--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#products">Our Products</a></li> <!-- New navigation link -->
+        <li><a href="products.html">Our Products</a></li> <!-- New navigation link -->
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
