--- a/products.html
+++ b/products.html
@@ -23,16 +23,16 @@
         <div class="container">
             <h2>Product List</h2>
             <div class="product">
-                <h3>Product 1</h3>
-                <p>Description of product 1.</p>
+                <h3>Cinnamon</h3>
+                <p>Description of Cinnamon.</p>
             </div>
             <div class="product">
-                <h3>Product 2</h3>
-                <p>Description of product 2.</p>
+                <h3>Tea</h3>
+                <p>Description of Tea.</p>
             </div>
             <div class="product">
-                <h3>Product 3</h3>
-                <p>Description of product 3.</p>
+                <h3>Others</h3>
+                <p>Description of Other Products.</p>
             </div>
             <!-- Add more products as needed -->
         </div>
